--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "victoria_real_state_website",
-    "short_name": "victoria_real_state_website",
+    "name": "victoriauaerealestate",
+    "short_name": "victoriauaerealestate",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
