--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_markdown: ^0.7.7+1
   font_awesome_flutter: ^10.9.0
+  google_fonts: ^6.3.0
   url_launcher: ^6.3.2
   visibility_detector: ^0.4.0+2
 
